frontend/test/should_fail/index_exec_edge_fromIndexMultipleFromTo_return_value_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s
{
	{ i:set<Node>=edgesFromIndexMultipleFromTo(bari, 0, 1, bard, 42.0, 42.0 + 1) }
}
